# oop_exercise_06

./: CMakeLists.txt  report.docx  task
header/: Allocator.hpp  Queue.h  QueueEl.h  Rhomb.h  Square.h  iterator.h
source/: Allocator.cpp  Queue.cpp  QueueEl.cpp  Read_input.cpp  Rhomb.cpp  Square.cpp  iterator.cpp  main.cpp
template/: Allocator.tpp  Queue.tpp  QueueEl.tpp  Read_input.tpp  Rhomb.tpp  Square.tpp
tests/: file.cpp  test_01.txt  test_02.txt
